[tool.poetry]
name = "simpleblog"
version = "0.1.0"
description = ""
authors = ["John Holstine <jholstine@oreillyauto.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = "^2.0.0b1"
rich = "^13.4.2"
uvicorn = "^0.22.0"
jsbeautifier = "^1.14.8"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
flake8-black = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
